Fix activity indicator on small screens
SKINNY-7

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -20,6 +20,15 @@ body {
     background-color: #333;
     border: 0;
 
+    .navbar-header,
+    .navbar-text {
+        float: left;
+    }
+
+    .navbar-header {
+        margin-right: 0;
+    }
+
     .navbar-brand {
         color: #ddd;
         font-weight: bold;
